cluster/base/stirling/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stirling
  namespace: stirling
spec:
  type: ClusterIP
  selector:
    app: stirling
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
